feat: integrate real data sources for unique risk analysis
WHAT MAKES THIS UNIQUE:
1. O*NET automation data - Research-backed automation susceptibility scores
   from US Dept of Labor (not made up numbers)
2. GitHub API - Real-time AI tool adoption (Copilot stars, language trends)
3. Hacker News API - Live market signals (layoffs, hiring, AI news)

Data sources:
- GitHubTrendsService: Fetches trending AI repos, language popularity,
  AI coding tool metrics (Copilot, GPT Engineer, AutoGPT)
- HackerNewsService: Fetches job market signals (layoffs, hiring posts),
  "Who's Hiring" thread analysis, AI development news
- ONetAutomationService: Research-backed automation risk scores per
  occupation with task-level analysis and 5-year projections

The analysis now shows:
- Your role's actual automation risk % from research
- Which specific tasks are at risk (from O*NET data)
- Real-time AI capability growth from GitHub
- Live industry signals from Hacker News
- Career pivot comparisons with research-backed risk reduction %